Started on ESP-DSMR

--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -3,12 +3,12 @@ build_flags =
     ; WiFi settings
     -D FACTORY_WIFI_SSID=\"\"
     -D FACTORY_WIFI_PASSWORD=\"\"
-    -D FACTORY_WIFI_HOSTNAME=\"esp-react\"
+    -D FACTORY_WIFI_HOSTNAME=\"esp-dmsr\"
 
     ; Access point settings
     -D FACTORY_AP_PROVISION_MODE=AP_MODE_DISCONNECTED
-    -D FACTORY_AP_SSID=\"ESP8266-React\" ; 1-64 characters
-    -D FACTORY_AP_PASSWORD=\"esp-react\" ; 8-64 characters
+    -D FACTORY_AP_SSID=\"ESP-DMSR\" ; 1-64 characters
+    -D FACTORY_AP_PASSWORD=\"esp-dmsr\" ; 8-64 characters
     -D FACTORY_AP_LOCAL_IP=\"192.168.4.1\"
     -D FACTORY_AP_GATEWAY_IP=\"192.168.4.1\"
     -D FACTORY_AP_SUBNET_MASK=\"255.255.255.0\"
@@ -37,7 +37,7 @@ build_flags =
     -D FACTORY_MQTT_USERNAME=\"\"
     -D FACTORY_MQTT_PASSWORD=\"\"
     ; if unspecified the devices hardware ID will be used
-    ;-D FACTORY_MQTT_CLIENT_ID=\"esp-react\"
+    ;-D FACTORY_MQTT_CLIENT_ID=\"esp-dmsr\"
     -D FACTORY_MQTT_KEEP_ALIVE=60
     -D FACTORY_MQTT_CLEAN_SESSION=true
     -D FACTORY_MQTT_MAX_TOPIC_LENGTH=128
