--- a/features.ini
+++ b/features.ini
@@ -4,5 +4,6 @@ build_flags =
     -D FT_SECURITY=1
     -D FT_MQTT=1
     -D FT_NTP=1
+    -D FT_SER2NET=1
     -D FT_OTA=1
     -D FT_UPLOAD_FIRMWARE=1
