--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 extra_configs = 
   factory_settings.ini
   features.ini
-default_envs = esp12e
-;default_envs = node32s
+;default_envs = esp12e
+default_envs = node32s-ota
 
 [env]
 build_flags=
@@ -11,7 +11,7 @@ build_flags=
   ${features.build_flags}
   -D NO_GLOBAL_ARDUINOOTA
   ; Uncomment ENABLE_CORS to enable Cross-Origin Resource Sharing (required for local React development)
-  ;-D ENABLE_CORS
+  -D ENABLE_CORS
   -D CORS_ORIGIN=\"http://localhost:3000\"
   ; Uncomment PROGMEM_WWW to enable the storage of the WWW data in PROGMEM
   -D PROGMEM_WWW
@@ -20,10 +20,11 @@ build_flags=
 lib_compat_mode = strict
 
 ; Uncomment & modify the lines below in order to configure OTA updates
+;upload_protocol = espota
 ;upload_flags = 
 ;  --port=8266 
 ;  --auth=esp-react
-;upload_port = 192.168.0.11  
+;upload_port = esp-react.dragundo.net 
 
 framework = arduino
 monitor_speed = 115200
@@ -36,14 +37,30 @@ lib_deps =
   ESP Async WebServer@>=1.2.0,<2.0.0
   AsyncMqttClient@>=0.8.2,<1.0.0
   
-[env:esp12e]
+[esp8266_common]
 platform = espressif8266
 board = esp12e
 board_build.f_cpu = 160000000L
 board_build.filesystem = littlefs
 
-[env:node32s]
+[node32s_common]
 ; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 board_build.partitions = min_spiffs.csv
 platform = espressif32
 board = node32s
+
+[env:esp12e-ota] 
+extends     = esp12e_common
+upload_protocol = espota
+
+[env:node32s-ota]
+extends     = node32s_common
+upload_protocol = espota
+
+[env:esp12e-usb] 
+extends     = esp12e_common
+upload_protocol = esptool
+
+[env:node32s-usb]
+extends     = node32s_common
+upload_protocol = esptool
