--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,13 @@ jobs:
       with:
          name: fimware.bin
          path: .pio/build/esp12e/firmware.bin
+    - name: Get current date
+        id: date
+        run: echo "name=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@release-1.3
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:     
         args: '.pio/build/esp12e/firmware.bin'  
+        releaseId: ${{ steps.date.outputs.date }}
