--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       id: date
       run: echo "name=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
     - name: Upload the artifacts
-      uses: skx/github-action-publish-binaries@release-1.3
+      uses: skx/github-action-publish-binaries@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:     
