--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Get current date
+        id: date	 
+        run: echo "name=$(date +'%Y-%m-%d-%H%M')" >> $GITHUB_ENV
       - name: Set up Python
         uses: actions/setup-python@v1
       - name: Install dependencies
@@ -23,8 +26,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.date.outputs.date }} 
+          release_name: Release ${{ steps.date.outputs.date }} 
           body: |
             Changes in this Release
             - First Change
@@ -36,5 +39,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: '*.bin'
+          args: '.pio/build/esp12e/firmware.bin'  
           releaseId: ${{ steps.create_release.outputs.id }}
