--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Get current date
         id: date	 
-        run: echo "name=$(date +'%Y%m%d.%H%M')" >> GITHUB_ENV
+        run: echo "release_date=$(date +'%Y%m%d.%H%M')" >> GITHUB_ENV
       - name: Test with environment variables
         run: echo $TAG_NAME - $RELEASE_NAME
         env:
-          TAG_NAME: nightly-tag-${{ steps.date.outputs.date }}
-          RELEASE_NAME: nightly-release-${{ steps.date.outputs.date }}
+          TAG_NAME: nightly-tag-${{ env.release_date }}
+          RELEASE_NAME: nightly-release-${{ env.release_date }}
 #       - name: Set up Python
 #         uses: actions/setup-python@v1
 #       - name: Install dependencies
