--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Get current date
         id: date	 
-        run: echo "release_date=$(date +'%Y%m%d.%H%M')" >> GITHUB_ENV
+        run: echo "release_date=2020-10-07T12:00:00+01:00" >> GITHUB_ENV
       - name: Test with environment variables
         run: echo $TAG_NAME - $RELEASE_NAME
         env:
