--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,7 @@ jobs:
         id: date	 
         run: echo "release_date=2020-10-07T12:00:00+01:00" >> GITHUB_ENV
       - name: Test with environment variables
-        run: echo $TAG_NAME - $RELEASE_NAME
-        env:
-          TAG_NAME: nightly-tag-${{ env.release_date }}
-          RELEASE_NAME: nightly-release-${{ env.release_date }}
+        run: echo "${{ env.release_date }}"
 #       - name: Set up Python
 #         uses: actions/setup-python@v1
 #       - name: Install dependencies
