--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Get current date
         id: date	 
-        run: echo "release_date=2020-10-07T12:00:00+01:00" >> GITHUB_ENV
+        run: echo "release_date=1" >> GITHUB_ENV
       - name: Test with environment variables
         run: |
           echo "${{ env.release_date }}"
           echo "$release_date"
+          printenv
 #       - name: Set up Python
 #         uses: actions/setup-python@v1
 #       - name: Install dependencies
