--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Get current date
         id: date	 
-        run: echo "release_date=1" >> GITHUB_ENV
+        run: |
+          echo "release_date=1" >> GITHUB_ENV
+          cat $GITHUB_ENV
       - name: Test with environment variables
         run: |
           echo "${{ env.release_date }}"
           echo "$release_date"
-          printenv
+          cat $GITHUB_ENV
 #       - name: Set up Python
 #         uses: actions/setup-python@v1
 #       - name: Install dependencies
