--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,27 +7,19 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-      - name: Format the date of next Tuesday
-        id: tuesday
-        run: echo "release_date=$(date +'%Y%m%d.%H%M')" >> $GITHUB_ENV
-        
-      - name: Read exported variable
-        run: |
-          echo "$release_date"
-          echo "${{ env.release_date }}"
-          
       - name: Get current date
         id: date	 
-        run: |
-          echo "release_date=1" >> GITHUB_ENV
-          echo "cat $GITHUB_ENV" 
+        run: echo "release_date=$(date +'%Y%m%d.%H%M')" >> $GITHUB_ENV
       - name: Test with environment variables
         run: |
           echo "${{ env.release_date }}"
           echo "$release_date"
-          echo "cat $GITHUB_ENV"  
+          echo $TAG_NAME - $RELEASE_NAME
+        env:
+          TAG_NAME: nightly-tag-${{ steps.date.outputs.date }}
+          RELEASE_NAME: nightly-release-${{ steps.date.outputs.date }}
+      - name: Checkout code
+        uses: actions/checkout@v2  
 #       - name: Set up Python
 #         uses: actions/setup-python@v1
 #       - name: Install dependencies
