--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,36 +16,36 @@ jobs:
           echo "$release_date"
           echo $TAG_NAME - $RELEASE_NAME
         env:
-          TAG_NAME: nightly-tag-${{ steps.date.outputs.date }}
-          RELEASE_NAME: nightly-release-${{ steps.date.outputs.date }}
+          TAG_NAME: nightly-tag-${{ env.release_date }}
+          RELEASE_NAME: nightly-release-${{ env.release_date }}
       - name: Checkout code
         uses: actions/checkout@v2  
-#       - name: Set up Python
-#         uses: actions/setup-python@v1
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install platformio
-#       - name: Run PlatformIO
-#         run: platformio run
-#       - name: Create Release
-#         id: create_release
-#         uses: actions/create-release@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           tag_name: ${{ env.now }}
-#           release_name: Release ${{ env.now }}
-#           body: |
-#             Changes in this Release
-#             - First Change
-#             - Second Change
-#           draft: false
-#           prerelease: false
-#       - name: Upload the artifacts
-#         uses: skx/github-action-publish-binaries@master
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           args: '.pio/build/esp12e/firmware.bin'  
-#           releaseId: ${{ steps.create_release.outputs.id }}
+      - name: Set up Python
+        uses: actions/setup-python@v1
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install platformio
+      - name: Run PlatformIO
+        run: platformio run
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.release_date }}
+          release_name: Release ${{ env.release_date }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
+      - name: Upload the artifacts
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: '.pio/build/esp12e/firmware.bin'  
+          releaseId: ${{ steps.create_release.outputs.id }}
