--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 extra_configs = 
   factory_settings.ini
   features.ini
-default_envs = esp12e
-;default_envs = node32s
+;default_envs = esp12e
+default_envs = node32s
 
 [env]
 build_flags=
@@ -11,7 +11,7 @@ build_flags=
   ${features.build_flags}
   -D NO_GLOBAL_ARDUINOOTA
   ; Uncomment ENABLE_CORS to enable Cross-Origin Resource Sharing (required for local React development)
-  ;-D ENABLE_CORS
+  -D ENABLE_CORS
   -D CORS_ORIGIN=\"http://localhost:3000\"
   ; Uncomment PROGMEM_WWW to enable the storage of the WWW data in PROGMEM
   -D PROGMEM_WWW
@@ -20,16 +20,16 @@ build_flags=
 lib_compat_mode = strict
 
 ; Uncomment & modify the lines below in order to configure OTA updates
-;upload_flags = 
-;  --port=8266 
-;  --auth=esp-react
-;upload_port = 192.168.0.11  
+upload_flags = 
+  --port=8266 
+  --auth=esp-react
+upload_port = esp-dsmr.local  
 
 framework = arduino
 monitor_speed = 115200
 
 extra_scripts = 
- pre:scripts/build_interface.py
+pre:scripts/build_interface.py
 
 lib_deps =
   ArduinoJson@>=6.0.0,<7.0.0
@@ -46,4 +46,20 @@ board_build.filesystem = littlefs
 ; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 board_build.partitions = min_spiffs.csv
 platform = espressif32
-board = node32s
+board = m5stick-c
+
+[env:esp12e-ota] 
+extends     = esp12e_common
+upload_protocol = espota
+
+[env:node32s-ota]
+extends     = node32s_common
+upload_protocol = espota
+
+[env:esp12e-usb] 
+extends     = esp12e_common
+upload_protocol = esptool
+
+[env:node32s-usb]
+extends     = node32s_common
+upload_protocol = esptool
