improve default settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_compat_mode = strict
 
 upload_flags = 
   --port=8266 
-  --auth=esp-react
+  --auth=esp-dsmr
 upload_port = esp-dsmr
 
 framework = arduino
