--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -21,7 +21,7 @@ build_flags =
 
     ; NTP settings
     -D FACTORY_NTP_ENABLED=true
-    -D FACTORY_NTP_TIME_ZONE_LABEL=\"Europe/London\"
+    -D FACTORY_NTP_TIME_ZONE_LABEL=\"Europe/Amsterdam\"
     -D FACTORY_NTP_TIME_ZONE_FORMAT=\"GMT0BST,M3.5.0/1,M10.5.0\"
     -D FACTORY_NTP_SERVER=\"time.google.com\"
 
