--- a/interface/package.json
+++ b/interface/package.json
@@ -52,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/mdi": "^1.1.2",
+    "@iconify/react": "^1.1.3",
     "react-app-rewired": "^2.1.6"
   }
 }
