--- a/platformio.ini
+++ b/platformio.ini
@@ -3,7 +3,7 @@ extra_configs =
   factory_settings.ini
   features.ini
 ;default_envs = esp12e
-default_envs = node32s
+default_envs = node32s-usb
 
 [env]
 build_flags=
@@ -23,43 +23,43 @@ lib_compat_mode = strict
 upload_flags = 
   --port=8266 
   --auth=esp-react
-upload_port = esp-dsmr.local  
+upload_port = esp-8266.local  
 
 framework = arduino
 monitor_speed = 115200
 
 extra_scripts = 
-  pre:scripts/build_interface.py
+;  pre:scripts/build_interface.py
 
 lib_deps =
   ArduinoJson@>=6.0.0,<7.0.0
   ESP Async WebServer@>=1.2.0,<2.0.0
   AsyncMqttClient@>=0.8.2,<1.0.0
   
-[env:esp12e]
+[env:esp12e_common]
 platform = espressif8266
 board = esp12e
 board_build.f_cpu = 160000000L
 board_build.filesystem = littlefs
 
-[env:node32s]
+[env:node32s_common]
 ; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 board_build.partitions = min_spiffs.csv
 platform = espressif32
 board = m5stick-c
 
 [env:esp12e-ota] 
-extends     = esp12e_common
+extends     = env:esp12e_common
 upload_protocol = espota
 
 [env:node32s-ota]
-extends     = node32s_common
+extends     = env:node32s_common
 upload_protocol = espota
 
 [env:esp12e-usb] 
-extends     = esp12e_common
+extends     = env:esp12e_common
 upload_protocol = esptool
 
 [env:node32s-usb]
-extends     = node32s_common
+extends     = env:node32s_common
 upload_protocol = esptool
