fix ota settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,10 +29,6 @@ build_flags=
 ; ensure transitive dependencies are included for correct platforms only
 lib_compat_mode = strict
 
-; Uncomment & modify the lines below in order to configure OTA updates
-upload_flags = 
-  --port=8266 
-  --auth=esp-react
 
 framework = arduino
 monitor_speed = 115200
@@ -60,7 +56,11 @@ upload_protocol = esptool
 
 [ota]
 upload_protocol = espota
-upload_port = esp-8266.local
+upload_port = esp-react
+; Uncomment & modify the lines below in order to configure OTA updates
+upload_flags = 
+  --port=8266 
+  --auth=esp-react
 
 [env:esp12e-ota]
 extends = esp12e_common, ota
