Add defaults for m5stickc

--- a/platformio.ini
+++ b/platformio.ini
@@ -77,3 +77,7 @@ lib_deps = paulo-raca/Buffered Streams@^1.0.6
 
 [env:node32s-usb]
 extends = node32s_common, usb
+
+[env:m5stick-c-usb]
+extends = node32s_common, usb
+board = m5stick-c
