--- a/platformio.ini
+++ b/platformio.ini
@@ -32,8 +32,8 @@ lib_ldf_mode = chain+
 
 framework = arduino
 monitor_speed = 115200
-;extra_scripts = 
-;	pre:scripts/build_interface.py
+extra_scripts = 
+	pre:scripts/build_interface.py
 lib_deps = 
 	ArduinoJson@>=6.0.0,<7.0.0
 	ESP Async WebServer@>=1.2.0,<2.0.0
