--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,6 @@
 extra_configs = 
   factory_settings.ini
   features.ini
-;default_envs = esp12e
-default_envs = node32s-ota
 
 [env]
 build_flags=
@@ -34,6 +32,7 @@ framework = arduino
 monitor_speed = 115200
 extra_scripts = 
 	pre:scripts/build_interface.py
+  post:scripts/rename_firmware.py
 lib_deps = 
 	ArduinoJson@>=6.0.0,<7.0.0
 	ESP Async WebServer@>=1.2.0,<2.0.0
@@ -86,15 +85,12 @@ upload_flags =
 
 [env:esp12e-ota]
 extends = esp12e_common, ota
-lib_deps = paulo-raca/Buffered Streams@^1.0.6
 
 [env:node32s-ota]
 extends = node32s_common, ota
-lib_deps = paulo-raca/Buffered Streams@^1.0.6
 
 [env:esp12e-usb]
 extends = esp12e_common, usb
-lib_deps = paulo-raca/Buffered Streams@^1.0.6
 
 [env:node32s-usb]
 extends = node32s_common, usb
