--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ lib_ldf_mode = chain+
 framework = arduino
 monitor_speed = 115200
 extra_scripts = 
-	pre:scripts/build_interface.py
+;	pre:scripts/build_interface.py
   post:scripts/rename_firmware.py
 lib_deps = 
 	ArduinoJson@>=6.0.0,<7.0.0
