Fix platformio settings merge

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 extra_configs = 
   factory_settings.ini
   features.ini
+default_envs = m5stickcplus-usb
 
 [env]
 build_flags=
@@ -33,11 +34,6 @@ monitor_speed = 115200
 extra_scripts = 
 ;	pre:scripts/build_interface.py
   post:scripts/rename_firmware.py
-lib_deps = 
-	ArduinoJson@>=6.0.0,<7.0.0
-	ESP Async WebServer@>=1.2.0,<2.0.0
-	AsyncMqttClient@>=0.8.2,<1.0.0
-  paulo-raca/Buffered Streams@^1.0.6
 
 lib_deps =
   ArduinoJson@>=6.0.0,<7.0.0
@@ -61,9 +57,9 @@ board = node32s
 board_build.filesystem = littlefs
 
 [m5stickc]
-; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 board_build.partitions = min_spiffs.csv
 platform = espressif32
+board_build.filesystem = littlefs
 board = m5stick-c
 build_flags=
   ${env.build_flags}
