Set factory defaults for dsmr

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,8 +22,8 @@ build_flags=
   ; Uncomment PROGMEM_WWW to enable the storage of the WWW data in PROGMEM
   -D PROGMEM_WWW
   ; Uncomment to configure Cross-Origin Resource Sharing
-  ;-D ENABLE_CORS
-  ;-D CORS_ORIGIN=\"*\"
+  -D ENABLE_CORS
+  -D CORS_ORIGIN=\"*\"
 
 ; ensure transitive dependencies are included for correct platforms only
 lib_compat_mode = strict
@@ -32,7 +32,7 @@ lib_ldf_mode = chain+
 framework = arduino
 monitor_speed = 115200
 extra_scripts = 
-;	pre:scripts/build_interface.py
+	pre:scripts/build_interface.py
   post:scripts/rename_firmware.py
 
 lib_deps =
@@ -82,11 +82,11 @@ upload_protocol = esptool
 
 [ota]
 upload_protocol = espota
-upload_port = esp-react
+upload_port = esp-dsmr
 ; Uncomment & modify the lines below in order to configure OTA updates
 upload_flags = 
   --port=8266 
-  --auth=esp-react
+  --auth=esp-dsmr
 
 [env:esp12e-ota]
 extends = esp12e_common, ota
