--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -9,12 +9,12 @@ build_flags =
   ; WiFi settings
   -D FACTORY_WIFI_SSID=\"\"
   -D FACTORY_WIFI_PASSWORD=\"\"
-  -D FACTORY_WIFI_HOSTNAME=\"#{platform}-#{unique_id}\" ; supports placeholders
+  -D FACTORY_WIFI_HOSTNAME=\"esp-dsmr\" ; supports placeholders
 
   ; Access point settings
   -D FACTORY_AP_PROVISION_MODE=AP_MODE_DISCONNECTED
-  -D FACTORY_AP_SSID=\"ESP8266-React-#{unique_id}\" ; 1-64 characters, supports placeholders
-  -D FACTORY_AP_PASSWORD=\"esp-react\" ; 8-64 characters
+  -D FACTORY_AP_SSID=\"ESP-DSMR\" ; 1-64 characters, supports placeholders
+  -D FACTORY_AP_PASSWORD=\"esp-dsmr\" ; 8-64 characters
   -D FACTORY_AP_CHANNEL=1
   -D FACTORY_AP_SSID_HIDDEN=false
   -D FACTORY_AP_MAX_CLIENTS=4
@@ -30,13 +30,13 @@ build_flags =
 
   ; NTP settings
   -D FACTORY_NTP_ENABLED=true
-  -D FACTORY_NTP_TIME_ZONE_LABEL=\"Europe/London\"
+  -D FACTORY_NTP_TIME_ZONE_LABEL=\"Europe/Amsterdam\"
   -D FACTORY_NTP_TIME_ZONE_FORMAT=\"GMT0BST,M3.5.0/1,M10.5.0\"
   -D FACTORY_NTP_SERVER=\"time.google.com\"
 
   ; OTA settings
   -D FACTORY_OTA_PORT=8266
-  -D FACTORY_OTA_PASSWORD=\"esp-react\"
+  -D FACTORY_OTA_PASSWORD=\"esp-dsmr\"
   -D FACTORY_OTA_ENABLED=true
 
   ; MQTT settings
@@ -52,9 +52,9 @@ build_flags =
 
   ; Serial settings
   -D FACTORY_SERIAL_ENABLED=true
-  -D FACTORY_SERIAL_RXPIN=14
-  -D FACTORY_SERIAL_TXPIN=15
-  -D FACTORY_SERIAL_BAUD=0
+  -D FACTORY_SERIAL_RXPIN=36
+  -D FACTORY_SERIAL_TXPIN=34
+  -D FACTORY_SERIAL_BAUD=115200
   -D FACTORY_SERIAL_CONFIG=0x800001c
   -D FACTORY_SERIAL_INVERTED=false
   -D FACTORY_TCP_PORT=1963
