--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 extra_configs = 
   factory_settings.ini
   features.ini
-default_envs = m5stickcplus-usb
+;default_envs = m5stickcplus-usb
 
 [env]
 build_flags=
@@ -32,7 +32,7 @@ lib_ldf_mode = chain+
 framework = arduino
 monitor_speed = 115200
 extra_scripts = 
-	pre:scripts/build_interface.py
+	;pre:scripts/build_interface.py
   post:scripts/rename_firmware.py
 
 lib_deps =
@@ -43,13 +43,13 @@ lib_deps =
   ;ESP Async WebServer@>=1.2.0,<2.0.0
   AsyncMqttClient@>=0.9.0,<1.0.0
   
-[env:esp12e_common]
+[esp12e_common]
 platform = espressif8266
 board = esp12e
 board_build.f_cpu = 160000000L
 board_build.filesystem = littlefs
 
-[env:node32s_common]
+[node32s_common]
 ; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 board_build.partitions = min_spiffs.csv
 platform = espressif32
