--- a/interface/package.json
+++ b/interface/package.json
@@ -4,29 +4,29 @@
   "private": true,
   "proxy": "http://192.168.0.23",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
-    "@types/lodash": "^4.14.176",
-    "@types/node": "^16.11.14",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "async-validator": "^4.1.1",
-    "axios": "^0.27.2",
-    "http-proxy-middleware": "^2.0.1",
-    "jwt-decode": "^3.1.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
+    "async-validator": "^4.2.5",
+    "axios": "^1.6.2",
+    "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "notistack": "^2.0.5",
+    "notistack": "^3.0.1",
     "parse-ms": "^3.0.0",
-    "react": "^18.1.0",
-    "react-app-rewired": "^2.1.8",
-    "react-dom": "^18.1.0",
-    "react-dropzone": "^11.4.2",
-    "react-router-dom": "^6.3.0",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "sockette": "^2.0.6",
-    "typescript": "^4.6.4"
+    "sockette": "^2.0.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
