fix: Broken build

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,15 +32,12 @@ lib_ldf_mode = chain+
 framework = arduino
 monitor_speed = 115200
 extra_scripts = 
-	;pre:scripts/build_interface.py
+	 pre:scripts/build_interface.py
   post:scripts/rename_firmware.py
 
 lib_deps =
   ArduinoJson@>=6.0.0,<7.0.0
-  ; The following allows the use of the latest code for ESPAsyncWebServer - there hasn't been a release in a while
-  ; Work around for https://github.com/me-no-dev/ESPAsyncWebServer/issues/1151
-  https://github.com/me-no-dev/ESPAsyncWebServer
-  ;ESP Async WebServer@>=1.2.0,<2.0.0
+  ESPAsyncWebServer@>=1.2.0,<2.0.0
   AsyncMqttClient@>=0.9.0,<1.0.0
   
 [esp12e_common]
@@ -52,13 +49,13 @@ board_build.filesystem = littlefs
 [node32s_common]
 ; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 board_build.partitions = min_spiffs.csv
-platform = espressif32
+platform = espressif32@5.0.0
 board = node32s
 board_build.filesystem = littlefs
 
 [m5stickc]
 board_build.partitions = min_spiffs.csv
-platform = espressif32
+platform = espressif32@5.0.0
 board_build.filesystem = littlefs
 board = m5stick-c
 build_flags=
